# fractals

./: CMakeLists.txt  README.md
src/: main.cpp
src/display/: GUI.cpp  GUI.h  launcher.cpp
src/display/color/: algov.cpp  algov.h  algov_alt.cpp  algov_alt.h  classic.cpp  classic.h
src/math/: complex.cpp  complex.h  julia.cpp  julia.h  mandelbrot.cpp  mandelbrot.h  utils.cpp  utils.h
